--- a/project/project/templates/index.html
+++ b/project/project/templates/index.html
@@ -1,7 +1,9 @@
 {% extends "layout.html" %}
 {% block body %}
- <ul> 
-Test MVC application using Flask
-<p>
- <a href="{{ url_for('printer') }}">Click here to print!</a>  </ul>
+<ul> 
+  Flask MVC
+  <p>
+    <a href="{{ url_for('printer') }}">Click here to print!</a>
+  </p>
+</ul>
 {% endblock %}
