--- a/project/project/templates/layout.html
+++ b/project/project/templates/layout.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <a style="text-align:center" href="{{ url_for('start') }}">Home</a>
-<a style="text-align:center" href="http://boosttech.in">About</a>
-<link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
-<div class=page>
-  <h1>Boost Technologies</h1>
+<a style="text-align:center" href="http://about.me/salimane">About</a>
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
+<div class="page">
+  <h1>Flask MVC</h1>
   {% for message in get_flashed_messages() %}
-    <div class=flash>{{ message }}</div>
+    <div class="flash">{{ message }}</div>
   {% endfor %}
   {% block body %}{% endblock %}
 </div>
