--- a/project/templates/print.html
+++ b/project/templates/print.html
@@ -2,8 +2,9 @@
 {% block body %}
   Test application
   <form action="{{ url_for('printer') }}" method=post>
+    {{ form.csrf }}
     <dl>
-      <dd>Text:<input type="text" name="text"/></dd>
+      <dd>{{ form.text.label }} {{ form.text(size=20) }}{{ render_error(form.text) }}</dd>      
       <dd><input type="submit" value="Flash"/></dd>
     </dl>
   </form>
