reorganize the template folder

--- a/project/templates/printer/print.html
+++ b/project/templates/printer/print.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "layout/layout.html" %}
 {% block body %}
   Test application
   <form action="{{ url_for('printer') }}" method=post>
