rename controllers folder and html cleanup

--- a/project/templates/layout/layout.html
+++ b/project/templates/layout/layout.html
@@ -7,7 +7,7 @@
     <a style="text-align:center" href="{{ url_for('start') }}">Home</a>
     <a style="text-align:center" href="http://about.me/salimane">About</a>
     <div class="page">
-      <h1>Flask MVC</h1>
+      <h1>Flask MVC Boilerplate</h1>
       {% for message in get_flashed_messages() %}
         <div class="flash">{{ message }}</div>
       {% endfor %}
