update to new flask version 0.9

--- a/project/templates/layout/layout.html
+++ b/project/templates/layout/layout.html
@@ -1,22 +1,22 @@
 <!doctype html>
-  <head>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
-    <title>Flask-MVC</title>
-  </head>
-  <body>    
-    <a style="text-align:center" href="{{ url_for('start') }}">Home</a>
-    <a style="text-align:center" href="http://about.me/salimane">About</a>
-    <div class="page">
-      <h1>Flask MVC Boilerplate</h1>
-      {% for message in get_flashed_messages() %}
-        <div class="flash">{{ message }}</div>
-      {% endfor %}
-      {% macro render_error(field) %}
-        {% if field.errors %}
-          {% for error in field.errors %}<span class='error'>{{ error }}</span>{% endfor %}
-        {% endif %}
-      {% endmacro %}
-      {% block body %}{% endblock %}
-    </div>
-  </body>
+    <head>
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
+        <title>Flask-MVC</title>
+    </head>
+    <body>    
+        <a style="text-align:center" href="{{ url_for('start') }}">Home</a>
+        <a style="text-align:center" href="http://salimane.com">About</a>
+        <div class="page">
+            <h1>Flask MVC Boilerplate</h1>
+            {% for message in get_flashed_messages() %}
+                <div class="flash">{{ message }}</div>
+            {% endfor %}
+            {% macro render_error(field) %}
+                {% if field.errors %}
+                    {% for error in field.errors %}<span class='error'>{{ error }}</span>{% endfor %}
+                {% endif %}
+            {% endmacro %}
+            {% block body %}{% endblock %}
+        </div>
+    </body>
 </html>
